<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/market"
    tools:context=".ShopActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="387dp"
        android:layout_height="665dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.45"
        android:background="@color/cardview_dark_background"
        android:text="@string/market"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="288dp"
        android:text="@string/_600_gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/upgrade"
        android:layout_width="326dp"
        android:layout_height="68dp"
        android:contentDescription="@string/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        app:srcCompat="@drawable/setting2" />


</androidx.constraintlayout.widget.ConstraintLayout>