<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/level1"
    >


    <ImageButton
        android:id="@+id/shop"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/shopping_cart_304843"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="83dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_height="82dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/computer_1293125"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/slimak"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="299dp"
        android:layout_height="201dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        app:srcCompat="@drawable/snail_def"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/point"
        android:textColor="@color/black"
        android:textSize="54sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/map"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="115dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/point"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/shop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/map"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/clickpersecond"
        android:layout_width="44dp"
        android:layout_height="33dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="14dp"
        android:scaleType="centerCrop"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>

